[package]
name = "axum-test"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.7.7"
config = "0.14.1"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "any", "postgres"] }
tokio = {version = "1.41", features = ["full"]}
serde = { version = "1.0.214", features = ["derive"] }
rboot = {path = "../rboot"}